--- a/api_referral/templates/referrals.html
+++ b/api_referral/templates/referrals.html
@@ -14,7 +14,7 @@
             <button onclick="getReferrals()">Получить список рефералов</button>
             <form action="{% url 'user_profile' %}" target="_blank"><button>Профиль</button></form>
         </div>
-        <h3 id="referral-header"></h3> <!-- Заголовок для списка рефералов -->
+        <h3 id="referral-header"></h3>
         <div id="referrals"></div>
     </div>
     <script>
